; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_udis86.c_ud_set_vendor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_udis86.c_ud_set_vendor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ud = type { i32 }

@UD_VENDOR_AMD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ud_set_vendor(%struct.ud* %0, i32 %1) #0 {
  %3 = alloca %struct.ud*, align 8
  %4 = alloca i32, align 4
  store %struct.ud* %0, %struct.ud** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %14 [
    i32 128, label %6
    i32 129, label %10
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.ud*, %struct.ud** %3, align 8
  %9 = getelementptr inbounds %struct.ud, %struct.ud* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  br label %18

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.ud*, %struct.ud** %3, align 8
  %13 = getelementptr inbounds %struct.ud, %struct.ud* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load i32, i32* @UD_VENDOR_AMD, align 4
  %16 = load %struct.ud*, %struct.ud** %3, align 8
  %17 = getelementptr inbounds %struct.ud, %struct.ud* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  br label %18

18:                                               ; preds = %14, %10, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
